--- a/students/yakymenko_kseniia/homework2/index.html
+++ b/students/yakymenko_kseniia/homework2/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <article>
+    <main>
         <section>
             <h1>HTML5 Семантичні елементи</h1>
             <p>Семантичний елемент чітко описує його значення як для браузера, так і
@@ -84,7 +84,7 @@
             <p>В одному документі може бути кілька елементів &lt;footer&gt;.</p>
             <img alt src="images/example4.jpg">
         </section>
-    </article>
+    </main>
 </body>
 
 </html>
